--- a/application/views/index.html
+++ b/application/views/index.html
@@ -9,7 +9,7 @@
             crossorigin="anonymous">
         </script>
         <script>
-            $(document).ready(function(){
+            $(function(){
                 $("#header").load("header.html");
                 $("#footer").load("footer.html");
             });
@@ -17,10 +17,10 @@
         <link rel="stylesheet" href="css/master.css">
     </head>
     <body>
-        <main>
-            <div id="header">
+        <div id="header">
 
-            </div>
+        </div>
+        <main>
             <section id="leaderBoard">
                 <header>
                     Leader Board
@@ -127,69 +127,72 @@
                 </div>
             </section>
             <section id="createGame">
-                <header>
-                    Create Game
+                <button type="button" name="button" class="host">Host a game</button>
+                <p>or</p>
+                <header id="join">
+                    Join a game
+                    <p> Join a session from below games.</p>
                 </header>
                 <div class="gridTiles">
                     <section class="tiles">
                         <p>CreatedBy <b>Soham</b></p>
                         <p>2 players joined</p>
-                        <button type="button" name="button">Join</button>
+                        <button type="button" name="button" class="join">Join</button>
                     </section>
                     <section class="tiles">
                         <p>CreatedBy <b>Venish</b></p>
                         <p>2 players joined</p>
-                        <button type="button" name="button">Join</button>
+                        <button type="button" name="button" class="join">Join</button>
                     </section>
                     <section class="tiles">
                         <p>CreatedBy <b>Katthak</b></p>
                         <p>2 players joined</p>
-                        <button type="button" name="button">Join</button>
+                        <button type="button" name="button" class="join">Join</button>
                     </section>
                     <section class="tiles">
                         <p>CreatedBy <b>Maithri</b></p>
                         <p>2 players joined</p>
-                        <button type="button" name="button">Join</button>
+                        <button type="button" name="button" class="join">Join</button>
                     </section>
                     <section class="tiles">
                         <p>CreatedBy <b>Soham</b></p>
                         <p>2 players joined</p>
-                        <button type="button" name="button">Join</button>
+                        <button type="button" name="button" class="join">Join</button>
                     </section>
                     <section class="tiles">
                         <p>CreatedBy <b>Venish</b></p>
                         <p>2 players joined</p>
-                        <button type="button" name="button">Join</button>
+                        <button type="button" name="button" class="join">Join</button>
                     </section>
                     <section class="tiles">
                         <p>CreatedBy <b>Katthak</b></p>
                         <p>2 players joined</p>
-                        <button type="button" name="button">Join</button>
+                        <button type="button" name="button" class="join">Join</button>
                     </section>
                     <section class="tiles">
                         <p>CreatedBy <b>Maithri</b></p>
                         <p>2 players joined</p>
-                        <button type="button" name="button">Join</button>
+                        <button type="button" name="button" class="join">Join</button>
                     </section>
                     <section class="tiles">
                         <p>CreatedBy <b>Soham</b></p>
                         <p>2 players joined</p>
-                        <button type="button" name="button">Join</button>
+                        <button type="button" name="button" class="join">Join</button>
                     </section>
                     <section class="tiles">
                         <p>CreatedBy <b>Venish</b></p>
                         <p>2 players joined</p>
-                        <button type="button" name="button">Join</button>
+                        <button type="button" name="button" class="join">Join</button>
                     </section>
                     <section class="tiles">
                         <p>CreatedBy <b>Katthak</b></p>
                         <p>2 players joined</p>
-                        <button type="button" name="button">Join</button>
+                        <button type="button" name="button" class="join">Join</button>
                     </section>
                     <section class="tiles">
                         <p>CreatedBy <b>Maithri</b></p>
                         <p>2 players joined</p>
-                        <button type="button" name="button">Join</button>
+                        <button type="button" name="button" class="join">Join</button>
                     </section>
                 </div>
             </section>
