--- a/application/views/index.html
+++ b/application/views/index.html
@@ -3,6 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Home</title>
+
+        <!-- Load React. -->
+        <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+        <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+        <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
         <script
             src="https://code.jquery.com/jquery-3.3.1.js"
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -11,7 +18,6 @@
         <script>
             $(function(){
                 $("#header").load("header.html");
-                $("#footer").load("footer.html");
             });
         </script>
         <link rel="stylesheet" href="css/master.css">
@@ -25,106 +31,17 @@
                 <header>
                     Leader Board
                 </header>
+                <div class="pointTable" id="pointTable">
+
+                </div>
+                <!--
                 <div class="pointTable">
                     <div class="entry"><b>Name</b></div>
                     <div class="entry"><b>Points</b></div>
                     <div class="entry">Harsham</div>
                     <div class="entry">120</div>
-                    <div class="entry">Vishal</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Katthak</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Maithri</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Soham</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Venish</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Harsham</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Vishal</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Katthak</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Maithri</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Soham</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Venish</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Harsham</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Vishal</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Katthak</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Maithri</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Soham</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Venish</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Harsham</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Vishal</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Katthak</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Maithri</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Soham</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Venish</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Harsham</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Vishal</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Katthak</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Maithri</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Soham</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Venish</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Harsham</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Vishal</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Katthak</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Maithri</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Soham</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Venish</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Harsham</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Vishal</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Katthak</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Maithri</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Soham</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Venish</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Harsham</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Vishal</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Katthak</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Maithri</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Soham</div>
-                    <div class="entry">120</div>
-                    <div class="entry">Venish</div>
-                    <div class="entry">120</div>
                 </div>
+                -->
             </section>
             <section id="createGame">
                 <button type="button" name="button" class="host">Host a game</button>
@@ -133,69 +50,24 @@
                     Join a game
                     <p> Join a session from below games.</p>
                 </header>
+                <div class="gridTiles" id="gridTiles">
+
+                </div>
+                <!--
                 <div class="gridTiles">
                     <section class="tiles">
                         <p>CreatedBy <b>Soham</b></p>
                         <p>2 players joined</p>
                         <button type="button" name="button" class="join">Join</button>
                     </section>
-                    <section class="tiles">
-                        <p>CreatedBy <b>Venish</b></p>
-                        <p>2 players joined</p>
-                        <button type="button" name="button" class="join">Join</button>
-                    </section>
-                    <section class="tiles">
-                        <p>CreatedBy <b>Katthak</b></p>
-                        <p>2 players joined</p>
-                        <button type="button" name="button" class="join">Join</button>
-                    </section>
-                    <section class="tiles">
-                        <p>CreatedBy <b>Maithri</b></p>
-                        <p>2 players joined</p>
-                        <button type="button" name="button" class="join">Join</button>
-                    </section>
-                    <section class="tiles">
-                        <p>CreatedBy <b>Soham</b></p>
-                        <p>2 players joined</p>
-                        <button type="button" name="button" class="join">Join</button>
-                    </section>
-                    <section class="tiles">
-                        <p>CreatedBy <b>Venish</b></p>
-                        <p>2 players joined</p>
-                        <button type="button" name="button" class="join">Join</button>
-                    </section>
-                    <section class="tiles">
-                        <p>CreatedBy <b>Katthak</b></p>
-                        <p>2 players joined</p>
-                        <button type="button" name="button" class="join">Join</button>
-                    </section>
-                    <section class="tiles">
-                        <p>CreatedBy <b>Maithri</b></p>
-                        <p>2 players joined</p>
-                        <button type="button" name="button" class="join">Join</button>
-                    </section>
-                    <section class="tiles">
-                        <p>CreatedBy <b>Soham</b></p>
-                        <p>2 players joined</p>
-                        <button type="button" name="button" class="join">Join</button>
-                    </section>
-                    <section class="tiles">
-                        <p>CreatedBy <b>Venish</b></p>
-                        <p>2 players joined</p>
-                        <button type="button" name="button" class="join">Join</button>
-                    </section>
-                    <section class="tiles">
-                        <p>CreatedBy <b>Katthak</b></p>
-                        <p>2 players joined</p>
-                        <button type="button" name="button" class="join">Join</button>
-                    </section>
-                    <section class="tiles">
-                        <p>CreatedBy <b>Maithri</b></p>
-                        <p>2 players joined</p>
-                        <button type="button" name="button" class="join">Join</button>
-                    </section>
                 </div>
+                -->
             </section>
         </main>
+
+
+        <!-- Load our React component. -->
+        <script type="text/babel" src="js/homePage.js"></script>
+        <script type="text/babel" src="js/homePage1.js"></script>
     </body>
 </html>
