--- a/application/views/header.html
+++ b/application/views/header.html
@@ -136,7 +136,7 @@
         <li id="home" name="home"><a href='/index'>Home</a></li>
         <li id="leaderboard" name="leaderboard"><a href='/leaderboard'>Leaderboard</a></li>
         <li id="rules" name="rules"><a href='/rules'>How to Play</a></li>
-        <li id="contact" name="contact"><a href='#contact'>Contact</a></li>
+        <li id="contact" name="contact"><a href='/profile'>Contact</a></li>
       </ul>
     </div>
     <script src="plugins/common/common.min.js"></script>
