--- a/application/views/profile.hbs
+++ b/application/views/profile.hbs
@@ -11,13 +11,18 @@
 	<link rel="stylesheet" type="text/css" href="css/image-upload.css"/>
 	<script type="text/javascript" src="js/loading-bar.js"></script>
 	<script type="text/javascript" src="js/image-upload.js"></script>
+	<script>
+	$(document).ready(function(){
+		alert(request.status);
+	});
+	</script>
 </head>
 <body>
 	<hr>
 	<div class="container target">
 		<div class="row">
 			<div class="col-sm-10">
-				<h1 class="">Vishalkumar</h1>
+				<h1 class="" id="name">{{name}}</h1>
 				<button type="button" class="btn btn-success">Home</button>  <button type="button" class="btn btn-info">Log Out</button>
 				<br>
 			</div>
@@ -33,18 +38,18 @@
             <!--left col-->
             <ul class="list-group" >
                 <li class="list-group-item text-muted" contenteditable="false" >Profile</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Email</strong></span>Demo.01@gmail.com</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Point</strong></span>700</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Time Played</strong></span> 01:15:25</li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Email</strong></span>{{email}}</li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Point</strong></span>{{point}}</li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Time Played</strong></span>{{Total}}</li>
 				<li class="list-group-item text-right"><span class="pull-left"><strong class="">Win % </strong></span>
 					<div class="progress" style="width: 70%;margin-left: 30%!important;margin-bottom:0px;" align="right">
-						<div class="progress-bar progress-bar-success progress-bar-striped active"  role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">40%
+						<div class="progress-bar progress-bar-success progress-bar-striped active"  role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:{{win}}%">{{win}}%
 						</div>
 					</div>
 				</li>
             </ul>
         </div>
-		
+
         <!--/col-3-->
 	<div class="col-sm-8" style="" contenteditable="false">
 		<div class="panel panel-default target">
@@ -53,7 +58,7 @@
 					<div class="row">
 						<div class="col-md-3"style="width: 20%!important;" >
 							<div class="thumbnal" align="center" >
-								<div  data-preset="bubble" class="ldBar label-center" data-value="600" data-pattern-size="100" ></div>
+								<div  data-preset="bubble" class="ldBar label-center" data-value="{{Total_game}}" data-pattern-size="100" ></div>
 								<div class="caption">
 								<h4>Game Played</h4>
 								</div>
@@ -61,7 +66,7 @@
 						</div>
 						<div class="col-md-3" style="width: 20%!important;">
 							<div class="thumbnal" align="center" >
-								<div  data-preset="bubble" class="ldBar label-center" data-value="200" data-pattern-size="100"></div>
+								<div  data-preset="bubble" class="ldBar label-center" data-value="{{rank_one}}" data-pattern-size="100"></div>
 								<div class="caption">
 								<h4>1#</h4>
 								</div>
@@ -69,7 +74,7 @@
 						</div>
 						<div class="col-md-3" style="width: 20%!important;">
 							<div class="thumbnal" align="center" >
-								<div  data-preset="bubble" class="ldBar label-center" data-value="200" data-pattern-size="100"></div>
+								<div  data-preset="bubble" class="ldBar label-center" data-value="{{rank_two}}" data-pattern-size="100"></div>
 								<div class="caption">
 								<h4>2#</h4>
 								</div>
@@ -77,7 +82,7 @@
 						</div>
 						<div class="col-md-3" style="width: 20%!important;">
 							<div class="thumbnal" align="center" >
-								<div  data-preset="bubble" class="ldBar label-center" data-value="150" data-pattern-size="100"></div>
+								<div  data-preset="bubble" class="ldBar label-center" data-value="{{rank_three}}" data-pattern-size="100"></div>
 								<div class="caption">
 									<h4>3#</h4>
 								</div>
@@ -85,14 +90,14 @@
 						</div>
 						<div class="col-md-3"style="width: 20%!important;">
 							<div class="thumbnal" align="center" >
-								<div  data-preset="bubble" class="ldBar label-center" data-value="50" data-pattern-size="100" ></div>
+								<div  data-preset="bubble" class="ldBar label-center" data-value="{{rank_four}}" data-pattern-size="100" ></div>
 								<div class="caption">
 									<h4>4#</h4>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>				  
+				</div>
 			</div>
 		</div>
 	</div>
