--- a/application/views/rules.hbs
+++ b/application/views/rules.hbs
@@ -7,20 +7,16 @@
             src="https://code.jquery.com/jquery-3.3.1.js"
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
             crossorigin="anonymous">
-        </script>
-        <script>
+
             $(function(){
                 $("#header").load("header.html");
-                $("#footer").load("footer.html");
             });
         </script>
         <link rel="stylesheet" href="css/rules.css">
     </head>
     <body>
         <main>
-            <div id="header">
-
-            </div>
+            <div id="header"></div>
             <section id="rules" class="section">
                 <header>
                     Rules
