confirm clean code

--- a/application/views/leaderboard.html
+++ b/application/views/leaderboard.html
@@ -12,7 +12,8 @@
             src="https://code.jquery.com/jquery-3.3.1.js"
     		integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     		crossorigin="anonymous">
-
+        </script>
+        <script>
             $(function(){
                 $("#header").load("header.html");
             });
@@ -89,7 +90,7 @@
                 </div>
             </div>
         </div>
-        
+
         <script src="plugins/common/common.min.js"></script>
         <script src="js/custom.min.js"></script>
         <script src="js/settings.js"></script>
