Changed board-file name to point it to the correct file and changed background color from white

--- a/application/views/ludo-game.html
+++ b/application/views/ludo-game.html
@@ -45,7 +45,7 @@
     </style>
     <script src="Ludo-game.js"></script>
 </head>
-<body>
+<body style="background-color: #F3F3F9; !important">
 	<div id="header"></div>
     <div id="main">
     <div id="board"></div>
