Revert "Changed board-file name to point it to the correct file and changed background color from white"
This reverts commit 237b568b9e822da12f5da82ed516a0c644c67db0.

--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -89,7 +89,7 @@ function joinGame(id)
           'board_id' : id
       },
       success: function(response) {
-          window.location.href = "/ludo-game.html";
+          window.location.href = "/Ludo-game.html";
       },
       error: function(response) {
           alert("Error on joining game credentials");
