Changed ludo-game.html & js to Ludo-game.html & js

--- a/application/views/Ludo-game.html
+++ b/application/views/Ludo-game.html
@@ -17,6 +17,9 @@
             //width:1000px;
            // float:left;
         }
+	body{
+	    background-color: #F3F3F9 !important;
+	}
         .pawns{
             width:30px;
             height:30px;
