--- a/application/views/leaderboard.html
+++ b/application/views/leaderboard.html
@@ -15,7 +15,7 @@
         </script>
         <script>
             $(function(){
-                $("#header").load("header.html");
+                $("#header").load("header.hbs");
             });
         </script>
     </head>
@@ -32,7 +32,7 @@
                                 <table class="table table-striped table-bordered zero-configuration">
                                     <thead>
                                         <tr>
-                                            <th>{{root}}</th>
+                                            <th>Rank</th>
                                             <th>Name</th>
                                             <th>Points</th>
                                             <th>No of game played</th>
