--- a/application/views/rules.hbs
+++ b/application/views/rules.hbs
@@ -10,14 +10,15 @@
         </script>
         <script>
             $(function(){
-                $("#header").load("header.html");
+                $("#header").load("header.hbs");
             });
         </script>
         <link rel="stylesheet" href="css/rules.css">
     </head>
     <body>
-        <main>
+
             <div id="header"></div>
+            <main>
             <section id="rules" class="section">
                 <header>
                     Rules
