--- a/application/views/css/rules.css
+++ b/application/views/css/rules.css
@@ -1,10 +1,10 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway);
 
 main {
-    font-family: Raleway;
+    font-family: 'Raleway' !important;
 }
 
-header {
+section > header {
     font-size: x-large;
     text-align: center;
     font-weight: bold;
