--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -6,15 +6,15 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         <script>
-            $(function(){
-                $("#header").load("header.hbs");
-            });
+
         </script>
         <link rel="stylesheet" href="css/master.css">
     </head>
     <body>
         <div id="header"></div>
         <input type="hidden" id="hdnFlag" value="false">
+        <input type="hidden" id="hdnJoinFlag" value="false">
+        <input type="hidden" id="hdnJoinGameId" value="">
         <!-- <div class="modal fade bs-example-modal-sm2">
           <div class="modal-dialog">
             <div class="modal-content">
@@ -80,9 +80,30 @@
 </html>
 <script>
 
+$(document).ready(function() {
+  $(function(){
+    var loggedInId = '{{session.user.id}}';
+    var loggedInName = '{{session.user.name}}';
+      $("#header").load("header.hbs", function() {
+        if(loggedInId) {
+            $('#btnLogout').show();
+            $('#btnLogin').hide();
+            $('#profileName').text(loggedInName);
+        } else {
+          $('#btnLogout').hide();
+          $('#btnLogin').show();
+          $('#profileName').text('');
+        }
+      });
+  });
+});
 <!-- Join game board -->
 function joinGame(id)
 {
+  var loggedInId = '{{session.user.id}}';
+  var loggedInName = '{{session.user.name}}';
+  if(loggedInId)
+  {
     $.ajax({
       url : '/join_board',
       type: 'post',
@@ -96,28 +117,35 @@ function joinGame(id)
           alert("Error on joining game credentials");
       }
     });
+  }
+  else {
+    $('#hdnJoinFlag').val(true);
+    $('#hdnJoinGameId').val(id);
+    $('#loginModal').modal('show');
+  }
+
 }
 <!-- Create game board -->
 function createGame()
 {
-  $.ajax({
-    url : '/create_board',
-    type: 'post',
-
-    success: function(response) {
-      if(response == "NeedsLogin")
-      {
-          $('#hdnFlag').val(true);
-          $('#loginModal').modal('show');
-      }
-      else {
-        window.location.href = "/Ludo-game.html";
-      }
-
-    },
-    error: function(response) {
+  var loggedInId = '{{session.user.id}}';
+  var loggedInName = '{{session.user.name}}';
+  if(loggedInId)
+  {
+    $.ajax({
+      url : '/create_board',
+      type: 'post',
+      success: function(response) {
+          window.location.href = "/Ludo-game.html";
+      },
+      error: function(response) {
         alert("Error on joining game credentials");
-    }
-  });
+      }
+    });
+  }
+  else {
+    $('#hdnFlag').val(true);
+    $('#loginModal').modal('show');
+  }
 }
 </script>
