Game board-fixed two ui related issues

--- a/application/views/Ludo-game.html
+++ b/application/views/Ludo-game.html
@@ -8,7 +8,7 @@
         </script>
         <script>
             $(function(){
-                $("#header").load("header.html");
+                $("#header").load("header.hbs");
             });
         </script>
     <title></title>
