Session validation, profile page linkup and leaderboard page

--- a/application/views/header.hbs
+++ b/application/views/header.hbs
@@ -32,7 +32,7 @@
         $(document).ready(function() {
 
             $("#cssmenu ul li").removeClass('active');
-            if (document.URL.indexOf('leaderboard') != -1) {
+            if (document.URL.indexOf('leaderBoard') != -1) {
                 $("#leaderboard").addClass("active");
             }
             else if (document.URL.indexOf('index') != -1) {
@@ -61,8 +61,7 @@
 
                         if(response.name != "")
                         {
-                          $('#btnLogin').hide();
-                          $('#btnLogout').show();
+                          window.location.href = "/index"
                         }
                         if($('#hdnFlag').val() == 'true')
                         {
@@ -70,7 +69,7 @@
                             url : '/create_board',
                             type: 'post',
                             success: function(response) {
-                                window.location.href = "/Ludo-game.html";
+                                window.location.href = "/gameBoard";
                             },
                             error: function(response) {
                               alert("Error on joining game credentials");
@@ -86,7 +85,7 @@
                                 'board_id' : $('#hdnJoinGameId').val()
                             },
                             success: function(response) {
-                                window.location.href = "/Ludo-game.html";
+                                window.location.href = "/gameBoard";
                             },
                             error: function(response) {
                                 alert("Error on joining game credentials");
@@ -100,12 +99,11 @@
                 });
             });
             $("#btnLogout").click(function() {
-              debugger;
                 var login = $.ajax({
                     url : '/logout',
                     type: 'post',
                     success: function(response) {
-                      location.reload();
+                      window.location.href = "/index";
                     },
                     error: function(response) {
                         alert("Error");
@@ -126,7 +124,7 @@
                   <a style="float: right;" class="logo">Ludo Game</a>
               </div>
               <div style="flex: 3;">
-                  <a style="float: right; margin-top: 10px; font-size: large;" id="profileName"></a>
+                  <a style="float: right; margin-top: 10px; font-size: large;" href="/profile" id="profileName"></a>
               </div>
               <div style="flex: 1;">
                   <a style="flex: 1;" class="loginNav">
@@ -198,7 +196,7 @@
         <nav id='cssmenu'>
             <ul class="navMenu">
                 <li id="home" name="home"><a href='/index'>Home</a></li>
-                <li id="leaderboard" name="leaderboard"><a href='/leaderboard'>Leaderboard</a></li>
+                <li id="leaderboard" name="leaderboard"><a href='/leaderBoard'>Leaderboard</a></li>
                 <li id="rules" name="rules"><a href='/rules'>How to Play</a></li>
                 <!-- <li id="contact" name="contact"><a href='#contact'>Contact</a></li> -->
             </ul>
